# SoroLend

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Plan.md  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
backend/: .env.example  .eslintrc.js  Dockerfile  package-lock.json  package.json
backend/src/: app.module.ts  health.controller.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
backend/src/cache/: cache.module.ts
backend/src/config/: config.module.ts
backend/src/database/: database.module.ts
backend/test/: app.e2e-spec.ts  lending-borrowing.e2e-spec.ts
contracts/: Cargo.toml
contracts/collateral-manager/: Cargo.toml
contracts/collateral-manager/src/: events.rs  lib.rs  math.rs  storage.rs
contracts/collateral-manager/test_snapshots/: test_get_collateral_value.1.json  test_health_factor.1.json
contracts/collateral-manager/tests/: health_factor_test.rs
contracts/flash-loan/: Cargo.toml
contracts/flash-loan/src/: events.rs  lib.rs  math.rs  (+1 more)
contracts/lending-pool/: Cargo.toml
contracts/liquidation/: Cargo.toml
contracts/price-oracle/: Cargo.toml
contracts/stoken/: Cargo.toml
frontend/: .gitignore  Dockerfile  angular.json  jest.config.js  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.scss
infrastructure/terraform/: main.tf
(+174 files in other folders)
